FIX: on mobile blog image and alignment

--- a/src/components/home/blogCard/styles.scss
+++ b/src/components/home/blogCard/styles.scss
@@ -64,6 +64,10 @@
     overflow: hidden;
     // z-index: 1;
 
+    @include mobile {
+      height: 200px;
+    }
+
     img {
       position: absolute;
       width: 100%;
